<resources>
    <string name="app_name">Instawatch</string>

    <!-- Strings related to login -->
    <string name="register_nombre">*Nombre</string>
    <string name="register_primer_apellido">*Primer Apellido</string>
    <string name="register_segundo_apellido">*Segundo Apellido</string>
    <string name="register_dni">*DNI/NIE</string>
    <string name="register_provincia">Provincia</string>
    <string name="register_municipio">Municipio</string>
    <string name="register_tlf">Teléfono</string>
    <string name="register_email">Email</string>
    <string name="register_edad">Edad</string>
    <string name="register_user">*Nombre Usuario</string>
    <string name="register_password">*Contraseña</string>
    <string name="register_confirm_password">*Confirme contraseña</string>
    <string name="tituloProvincias">Seleccione provincia</string>


    <string name="prompt_user">Usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Iniciar sesión</string>
    <string name="action_sign_up">Registrarse</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">Este email no es valido</string>
    <string name="error_invalid_dni">Este dni no es valido</string>
    <string name="error_invalid_campo_vacio">Los campos marcados con * no pueden estar vacios</string>
    <string name="error_password_noconfirmada">Las contraseñas no coinciden</string>

    <string name="error_invalid_password">Esta contraseña es demasiado corta</string>
    <string name="error_incorrect_password">Esta contraseña es incorrecta</string>
    <string name="error_incorrect_user">Este usuario no existe</string>
    <string name="error_incorrect_user_yaexiste">Este usuario ya existe</string>

    <string name="error_field_required">Este campo es obligatorio</string>
    <string name="permission_rationale">Se requieren permisos de contactos para acceder al autocompletado del email</string>
    <string name="title_activity_navigation">NavigationActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_add_video">Añadir vídeo</string>
    <string name="title_activity_register">Registro</string>
    <string name="title_activity_ajustes">Ajustes</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_videos">VideosActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_no_vale">NoValeActivity</string>
</resources>
